--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-body {
-    display: flex;
-    justify-content: center;
-}
 
 header {
     display: block;
@@ -11,8 +7,18 @@ header {
     width: 550px;
     padding-top: 35px;
     padding-bottom: 45px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .results-container {
-    display: block;
+    width: 550px;
+    margin-right: auto;
+    margin-left: auto;
+    text-align: center;
+    background: #1F2937;
+}
+
+article {
+    background: #273549;
 }
