--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 
 header {
     display: block;
+    font-family: 'Inter';
+    font-size: 15px;
     text-align: center;
     background: #6943FF;
     color: white;
@@ -11,14 +13,81 @@ header {
     margin-left: auto;
 }
 
+h1 {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+input {
+    width: 120px;
+    height: 85px;
+    background: #6943FF;
+    border: 2px solid #B295FF;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    border-radius: 5px;
+    font-family: 'Inter';
+    font-size: 60px;
+    color: white;
+    text-align: center;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+button {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    background: white;
+    width: 120px;
+    height: 45px;
+    border-radius: 5px;
+    border: 0px;
+    font-family: 'Inter';
+    font-size: 16px;
+    color: black;
+    cursor: pointer;
+}
+
 .results-container {
     width: 550px;
     margin-right: auto;
     margin-left: auto;
     text-align: center;
     background: #1F2937;
+    padding-top: 35px;
+    padding-bottom: 35px;
 }
 
 article {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background: #273549;
+    width: 500px;
+    height: 110px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 25px;
+    margin-top: 25px;
+    border-radius: 5px;
+    font-family: 'Inter';
+}
+
+article h4 {
+    color: #CCC1FF;
+    font-size: 20px;
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
+
+article p {
+    color: white;
+    font-size: 16px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
